fix for suggested changes including scrollbar. server.js print out. viewport meta was missing

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ body {
     background-color: #F5F4F7;
     height: 100vh;
     flex-direction: column;
-    overflow: auto;
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
 }
 
 /* TYPOGRAPHY */
@@ -44,6 +46,12 @@ form {
     justify-content: flex-end;
     width: 100%;
     flex-wrap: wrap;
+}
+
+.form-actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 label {
@@ -118,12 +126,20 @@ button[type = 'submit'] {
 }
 
 /* RESPONSIVE */
-@media only screen and (max-device-width: 600px) {
+@media only screen and (max-width: 767px) {
     label {
         display: block;
     }
 
     .form-group { 
         display: block;
+    }
+
+    #registration-form, #thank-you {
+        max-width: 80vw;
+    }
+
+    button[type = 'submit'] {
+        margin-top: 16px;
     }
 }
